Wed Dec  2 20:57:43 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.cpp:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorTask.h:
        * tools/odds_monitor/MonitorTask.cpp:

          Refactored processing and applyed method templates to reduce
          the total code volume.  Changed to forward updates from the
          task to the storage object to let it mediate the updates with
          the GUI.  Stubbed the updates in the MonitorDataStorage.inl
          file.

Wed Dec  2 19:03:41 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:

          update
            - Added type specific data update methods.
          setRepoIor
            - implemented to call service in two stages: setting the IOR
              and then switching to it.  Clear model data between the two
              stages.

        * tools/odds_monitor/MonitorTask.h:
        * tools/odds_monitor/MonitorTask.cpp:

          setRepoIor
            - refactored to move switching repository assignments to
              the new setActiveRepo method.
          setActiveRepo
            - new method to actually switch active repository and
              initialize the instrumentation subscriptions.
          InboundData
            - new private template class to handle reading data and
              forwarding it to the model.
          dispatchReader
            - new method to select the correct data processor and invoke
              it.

          Added new 'handleTypeMap' container that maps instance handles
          to instrumentation domain report types.  This is used to select
          which data processor to invoke when receiving data.
