@@ -511,8 +511,8 @@ Also see [[AdvancedOptions]]</pre>
 </div>
 <!--POST-SHADOWAREA-->
 <div id="storeArea">
-<div title="Class Diagram" modifier="Steven Stallion" created="200912011933" modified="200912012157" changecount="2">
-<pre>[img[Class Diagram|images/class.png]]</pre>
+<div title="Class Diagram" modifier="Steven Stallion" created="200912011933" modified="200912022013" changecount="3">
+<pre>{{classDiagram{[img[images/class.png]]}}}</pre>
 </div>
 <div title="ColorPalette" modifier="Steven Stallion" created="200911302008" modified="200912011920" changecount="17">
 <pre>Background: #fff
@@ -532,16 +532,16 @@ TertiaryDark: #666
 Error: #f88
 </pre>
 </div>
-<div title="Configuration" modifier="Steven Stallion" created="200912011939" modified="200912012324" changecount="21">
-<pre>As with other transports, the multicast transport supports dynamic configuration using the ACE Service Configurator Framework. A svc.conf file should be created which contains the following:
+<div title="Configuration" modifier="Steven Stallion" created="200912011939" modified="200912022135" changecount="28">
+<pre>As with other transports, dynamic configuration is provided by the ACE Service Configurator Framework. A svc.conf file should be created which contains the following:
 {{{
 dynamic OpenDDS_DCPS_Multicast_Service Service_Object * OpenDDS_Multicast:_make_MulticastLoader()
 }}}
-It may then be loaded dynamically at runtime by passing the following arguments:
+The transport may then be loaded at runtime by passing the following arguments:
 {{{
--ORBSvcConf  svc.conf
+-ORBSvcConf svc.conf
 }}}
-Alternately, the multicast transport may be statically loaded by including the {{{Multicast.h}}} header (implies static linking):
+Alternately, the transport may be statically loaded by including the {{{dds/DCPS/transport/multicast/Multicast.h}}} header (implies static linking):
 {{{
 #ifdef ACE_AS_STATIC_LIBS
 # include &lt;dds/DCPS/transport/multicast/Multicast.h&gt;
@@ -595,7 +595,7 @@ nak_timeout=30000
 # The default value is 32.
 nak_repair_size=32
 }}}
-Default examples of these files are provided under the {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}} directory.</pre>
+Default examples of these files are provided under the source directory (see: {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}}).</pre>
 </div>
 <div title="DefaultTiddlers" modifier="Steven Stallion" created="200912011933" modified="200912012032" changecount="5">
 <pre>[[Overview]]
@@ -605,29 +605,29 @@ Default examples of these files are provided under the {{{$DDS_ROOT/dds/DCPS/tra
 [[Known Issues]]
 [[Future Tasks]]</pre>
 </div>
-<div title="Future Tasks" modifier="Steven Stallion" created="200912011940" modified="200912012328" changecount="24">
-<pre>An exponential backoff should be introduced to prevent SYN flooding in large multicast groups. See: {{{OpenDDS::DCPS::SynWatchdog}}}
+<div title="Future Tasks" modifier="Steven Stallion" created="200912011940" modified="200912022140" changecount="33">
+<pre>An exponential backoff should be introduced to prevent potential SYN flooding in large multicast groups (see: {{{OpenDDS::DCPS::SynWatchdog::next_interval}}}).
 
-A random backoff should be introduced to prevent NAK implosions in large multicast groups. See: {{{OpenDDS::DCPS::NakWatchdog}}}
+A random backoff should be introduced to prevent potential NAK implosions in large multicast groups (see: {{{OpenDDS::DCPS::NakWatchdog::next_interval}}}).
 
-NAK suppression for ranges requested by other peers within the same interval should be implemented to prevent NAK implosions in large multicast groups.
+NAK suppression for duplicate ranges requested by other peers within a given interval should be introduced to prevent potential NAK implosions in large multicast groups.
 
-An FEC mechanism should be introduced to reduce repair requests and to provide an additional source from which to detect reception gaps apart from {{{LIVELINESS}}}.
+An FEC mechanism should be introduced to reduce repair requests and to provide an additional source from which to detect reception gaps.
 
-SYNACK's should be predicated on association status to prevent potential denial of service attacks (not currently supported by the ETF).
+~SYNACKs should be predicated on association status to prevent potential denial of service attacks (not currently supported by the ETF).
 
-{{{DataLink}}}s should be allowed to initiate the removal of an association based on reliability status (not currently supported by the ETF).</pre>
+{{{DataLink}}}s should initiate the removal of an association based on changes in reliability (not currently supported by the ETF).</pre>
 </div>
-<div title="Known Issues" modifier="Steven Stallion" created="200912012032" modified="200912012327" changecount="26">
-<pre>{{{TRANSPORT_PRIORITY}}} is not directly supported by this transport. This is partially due to routing restrictions placed on default group addresses as the selection heuristic assigns from the link-local range. Setting the TOS would provide little to no benefit for multicast datagrams at the cost of additional complexity managing n-way associations by priority key.
+<div title="Known Issues" modifier="Steven Stallion" created="200912012032" modified="200912022141" changecount="39">
+<pre>{{{TRANSPORT_PRIORITY}}} is not directly supported. This is partially due to routing restrictions placed on default group addresses as the selection heuristic assigns from the link-local range. Setting the TOS would provide little to no benefit for non-default group addresses at the cost of additional resources and complexity managing n-ary associations by priority key.
 
-Reliability must be configured via the {{{reliable}}} transport configuration option as the ETF currently multiplexes best-effort and reliable data samples across the same {{{DataLink}}}; this effectively disables autonegotiation of reliability between peers at the transport level.
+Reliability must be configured via the {{{reliable}}} transport configuration option. The ETF currently multiplexes best-effort and reliable samples across the same {{{DataLink}}} which effectively disables autonegotiation of reliability between peers at the transport level.
 
-{{{nak_repair_size}}} may not exceed {{{16384}}} due to limits imposed by {{{OpenDDS::DCPS::SequenceNumber}}} comparisons. See: {{{$DDS_ROOT/dds/DCPS/Definitions.h}}}
+{{{nak_repair_size}}} must not exceed {{{16383}}} (2^^14^^-1) due to limits imposed by {{{OpenDDS::DCPS::SequenceNumber}}} comparisons (see: {{{$DDS_ROOT/dds/DCPS/Definitions.h}}}).
 
 The current implementation relies on {{{LIVELINESS}}} to periodically send application-level heartbeat messages to aid in detecting reception gaps. If {{{AUTOMATIC_LIVELINESS_QOS}}} (the default) is not used, peers may not detect these gaps in a timely manner leading to unrecoverable data loss.
 
-The current implementation relies on the transport reactor being derived from {{{ACE_Select_Reactor}}}; this ensures only a single thread may be active when sending/receiving data. If the transport reactor implementation is changed, additional locks must be introduced to protect critical sections.</pre>
+The current implementation relies on the transport reactor being derived from {{{ACE_Select_Reactor}}}; this ensures a single thread may be active when sending/receiving data. If the transport reactor implementation is changed, additional locks must be introduced to protect critical sections.</pre>
 </div>
 <div title="MainMenu" modifier="Steven Stallion" created="200912011934" modified="200912012032" changecount="7">
 <pre>[[Overview]]
@@ -642,17 +642,17 @@ The current implementation relies on the transport reactor being derived from {{
 
 OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 </div>
-<div title="Overview" modifier="Steven Stallion" created="200912011932" modified="200912020033" changecount="78">
-<pre>Starting with the OpenDDS 2.1 release, a new multicast transport is available which replaces the {{{SimpleMcast}}} and {{{ReliableMulticast}}} transports. The source for the {{{multicast}}} transport may be found under {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}} and is available under the general OpenDDS license. 
+<div title="Overview" modifier="Steven Stallion" created="200912011932" modified="200912022137" changecount="95">
+<pre>Starting with the OpenDDS 2.1 release, a new multicast transport is available which replaces the {{{SimpleMcast}}} and {{{ReliableMulticast}}} transports. The source for the {{{multicast}}} transport is available under the general OpenDDS license and may be found under: {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}}.
 
-What follows is a detailed overview of the design, configuration, known issues, and potential future enhancements for the {{{multicast}}} transport:
+What follows is a detailed overview of the design, configuration, known issues, and potential future enhancements:
 
-Unlike other transports, multicast reservations are formed between {{{DomainParticipant}}}s rather than individual publications and subscriptions. This allows any number of associations  belonging to the same pair of participants to re-use an existing {{{DataLink}}}, thereby reducing the amount of resources needed in multicast intensive environments. Another departure is unified support for best-effort and reliable delivery (based on transport configuration). Delivery-specific behavior is consolidated into each concrete {{{MulticastDataLink}}} implementation which allows for the same set of transport strategies to be used regardless of delivery mode.
+Unlike other transports, multicast reservations are formed between participants rather than individual publications and subscriptions. This allows any number of associations  belonging to the same pair of participants to re-use an existing {{{DataLink}}}, thereby reducing the amount of resources needed in multicast intensive environments. Another departure is unified support for best-effort and reliable delivery based on transport configuration. Delivery-specific behavior is abstracted by each concrete {{{MulticastDataLink}}} implementation, which allows for the same set of transport strategies to be used regardless of delivery mode.
 
 Two delivery modes are supported: best-effort and reliable.
-* Best-effort delivery imposes the least amount of processing as data is exchanged between peers, however it does not provide any guarantee of reception. Data may be lost due to unresponsive or unreachable peers or received in duplicate. See: {{{OpenDDS::DCPS::BestEffortMulticast}}}
-* Reliable delivery provides for guaranteed delivery of data to associated peers with no duplicates at the cost of additional processing. See: {{{OpenDDS::DCPS::ReliableMulticast}}}
-When a new reservation is made, a remote and local peer identifier is created based on the participant ID of the associated entities. These ~IDs are used to identify each peer within the multicast group. The ETF will always designate the publishing side of the association as the active side of a given {{{DataLink}}}. An active peer will have many passive peers it is associated with and vice-versa. Multicast datagrams will always have the peer ID in the source field of the transport header. See: {{{OpenDDS::DCPS::TransportHeader}}}
+* Best-effort delivery imposes the least amount of overhead as data is exchanged between peers, however it does not provide any guarantee of delivery. Data may be lost due to unresponsive or unreachable peers or received in duplicate (see: {{{OpenDDS::DCPS::BestEffortMulticast}}}).
+* Reliable delivery provides for guaranteed delivery of data to associated peers with no duplication at the cost of additional processing and bandwidth (see: {{{OpenDDS::DCPS::ReliableMulticast}}}).
+When a new reservation is made, a remote and local peer identifier is assigned based on the participant ID of the associated entities. These values are used to uniquely identify each side of a given {{{DataLink}}} within the multicast group. The ETF will always designate the publishing side of the association as being active. An active peer will have many passive peers it is associated with and vice-versa. Multicast datagrams will always assign the peer ID to the source field of the transport header (see: {{{OpenDDS::DCPS::TransportHeader}}}).
 
 The {{{multicast}}} transport may be configured and attached similarly to other transport implementations:
 {{{
@@ -691,27 +691,27 @@ project : dcps_multicast {
 &lt;/div&gt;
 &lt;!--}}}--&gt;</pre>
 </div>
-<div title="Reliability" modifier="Steven Stallion" created="200912011934" modified="200912020052" changecount="72">
-<pre>DCPS control samples were chosen in lieu of more traditional ~PDUs for the exchange of control information between peers. This allows the transport to leverage existing functionality such as byte ordering and efficient marshaling/demarshaling of data at the cost of a slightly increased payload size.
-
-Reliable delivery is achieved through two primary mechanisms:
+<div title="Reliability" modifier="Steven Stallion" created="200912011934" modified="200912022130" changecount="87">
+<pre>Reliable delivery is achieved through two primary mechanisms:
 * 2-way peer handshaking (SYN/SYNACK)
 * Negative acknowledgment of missing data (NAK/NAKACK)
-For the purposes of examining the interaction between reliable peers, it helps to narrow our view of the multicast group to two specific peers: The active peer is the publishing side of the {{{DataLink}}}; the passive side will be the //first// peer associated with the link when it was created. It is important to remember that control data will be exchanged among all peers within the multicast group, however disinterested peers will discard any data which is not addressed to them directly.
+For the purposes of examining the interactions between reliable peers, it helps to narrow the view of the multicast group to two specific peers: active and passive. The active peer is the publishing side of the {{{DataLink}}}. The passive peer will be the remote peer associated with the link when it was created. It is important to remember that control data will be exchanged among all peers within the multicast group, however disinterested peers will discard payloads which are not addressed to them directly.
+
+DCPS control samples were chosen in lieu of more traditional ~PDUs for the exchange of control data between peers; this allowed the transport to leverage existing functionality at the cost of a slightly increased payload size.
 !!SYN/SYNACK
 [&lt;img[images/handshake.png]]
-The active peer initiates the handshake by sending {{{MULTICAST_SYN}}} control samples to a specific remote peer at a fixed interval bounded by a timeout.
+The active peer initiates a handshake by sending a {{{MULTICAST_SYN}}} control sample to the passive peer at a fixed interval bounded by a timeout to ensure delivery.
 
-Upon receiving the {{{MULTICAST_SYN}}} control sample, the passive peer records the current transport sequence value for the active peer and responds with a {{{MULTICAST_SYNACK}}} control sample. This sequence number establishes a value from which we can begin to identify reception gaps.
+Upon receiving the {{{MULTICAST_SYN}}} control sample, the passive peer records the current transport sequence value for the active peer and responds with a {{{MULTICAST_SYNACK}}} control sample. This sequence number establishes a value from which reception gaps may be identified in the future.
 
-If the active peer receives the {{{MULTICAST_SYNACK}}} control sample, it then notifies the ETF that the association is valid which will in turn trigger a communication status transition in the DCPS layer. In the event a {{{MULTICAST_SYNACK}}} control sample is not received, an error is logged.
+If the active peer receives a {{{MULTICAST_SYNACK}}} control sample, it will then notify the ETF that the association is complete, which will in turn trigger a communication status change in the DCPS layer. In the event a {{{MULTICAST_SYNACK}}} control sample is not received, an error will be logged.
 !!NAK/NAKACK
 [&gt;img[images/repair.png]]
-As each datagram is delivered to the {{{DataLink}}}, the transport sequence value is recorded. Periodically, a watchdog executes and examines the history of datagrams received for reception gaps. The watchdog will first age off any outstanding repair requests which have not been fulfilled by resetting the sequence low-water mark and logging an error. In the event a new reception gap is identified, the {{{DataLink}}} records the current interval and the high-water mark for the received data. It will then issue {{{MULTICAST_NAK}}} control samples to all active peers from which it is missing data.
+As each datagram is delivered to the {{{DataLink}}}, the transport sequence value is scored against a special container which identifies reception gaps (see: {{{OpenDDS::DCPS::DisjointSequence}}}). Periodically, a watchdog executes and will age off any outstanding repair requests which have not been fulfilled by resetting the sequence low-water mark and logging an error. Once outstanding requests have been purged, the watchdog will then check for reception gaps.  In the event a new (or existing) reception gap is identified, the {{{DataLink}}} records the current interval and the high-water mark for the transport sequence. It will then issue {{{MULTICAST_NAK}}} control samples to active peers from which it is missing data.
 
-If the active peer receives a {{{MULTICAST_NAK}}} control sample it examines its send buffer for the missing datagram. If the datagram is no longer available, it sends a {{{MULTICAST_NAKACK}}} control sample to the entire multicast group to suppress further repair requests. If the datagram is still available, it resends the missing data to the entire multicast group.
+If the active peer receives a {{{MULTICAST_NAK}}} control sample it will examine its send buffer for the missing datagram. If the datagram is no longer available, it sends a {{{MULTICAST_NAKACK}}} control sample to the entire multicast group to suppress further repair requests. If the datagram is still available, it resends the missing data to the entire multicast group.
 
-If the passive peer instead receives a {{{MULTICAST_NAKACK}}} control sample, it will behave just as if the repair request has aged off, suppressing further repair requests.</pre>
+If the passive peer receives a {{{MULTICAST_NAKACK}}} control sample, it will behave just as if the repair request had aged off, suppressing further repair requests and logging an error as above.</pre>
 </div>
 <div title="SideBarOptions" modifier="Steven Stallion" created="200911302023" changecount="1">
 <pre>&lt;&lt;search&gt;&gt;&lt;&lt;closeAll&gt;&gt;&lt;&lt;permaview&gt;&gt;&lt;&lt;newTiddler&gt;&gt;&lt;&lt;saveChanges&gt;&gt;&lt;&lt;slider chkSliderOptionsPanel OptionsPanel &quot;options »&quot; &quot;Change TiddlyWiki advanced options&quot;&gt;&gt;</pre>
@@ -729,7 +729,7 @@ If the passive peer instead receives a {{{MULTICAST_NAKACK}}} control sample, it
 <pre>Senior Software Engineer
 [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 </div>
-<div title="StyleSheet" modifier="Steven Stallion" created="200911302014" modified="200912011927" changecount="55">
+<div title="StyleSheet" modifier="Steven Stallion" created="200911302014" modified="200912022013" changecount="56">
 <pre>a:hover {
     text-decoration: none;
 }
@@ -760,6 +760,12 @@ If the passive peer instead receives a {{{MULTICAST_NAKACK}}} control sample, it
 
 .toolbar {
     float: right;
+}
+
+.classDiagram img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }</pre>
 </div>
 <div title="StyleSheetColors" modifier="Steven Stallion" created="200911302020" modified="200911302134" changecount="5">
